@@ -43,9 +43,11 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Queue;
 import java.util.Set;
-import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import org.apache.http.client.HttpClient;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrResponse;
@@ -144,10 +146,16 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
   private OverseerCollectionConfigSetProcessorToBeTested underTest;
 
   private Thread thread;
-  private final Queue<QueueEvent> queue = new ArrayBlockingQueue<>(10);
+  private final Queue<QueueEvent> queue = new LinkedBlockingQueue<>();
 
   private static class OverseerCollectionConfigSetProcessorToBeTested
       extends OverseerCollectionConfigSetProcessor {
+
+    /**
+     * If non-null, all the threads will wait on this latch after task execution. This is used to
+     * force thread contention in post-processing.
+     */
+    private final CountDownLatch postLatch;
 
     public OverseerCollectionConfigSetProcessorToBeTested(
         ZkStateReader zkStateReader,
@@ -159,7 +167,8 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
         Overseer overseer,
         DistributedMap completedMap,
         DistributedMap failureMap,
-        SolrMetricsContext solrMetricsContext) {
+        SolrMetricsContext solrMetricsContext,
+        CountDownLatch postLatch) {
       super(
           zkStateReader,
           myId,
@@ -173,11 +182,52 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
           completedMap,
           failureMap,
           solrMetricsContext);
+
+      this.postLatch = postLatch;
     }
 
     @Override
     protected LeaderStatus amILeader() {
       return LeaderStatus.YES;
+    }
+
+    @Override
+    protected Runner createRunner(
+        OverseerMessageHandler messageHandler,
+        ZkNodeProps message,
+        String operation,
+        QueueEvent head,
+        OverseerMessageHandler.Lock lock) {
+      return new LatchRunner(messageHandler, message, operation, head, lock);
+    }
+
+    /** Override the default runner to wait on a latch once the task is completed. */
+    private class LatchRunner extends Runner {
+
+      public LatchRunner(
+          OverseerMessageHandler messageHandler,
+          ZkNodeProps message,
+          String operation,
+          QueueEvent head,
+          OverseerMessageHandler.Lock lock) {
+        super(messageHandler, message, operation, head, lock);
+      }
+
+      @Override
+      public void run() {
+        super.run();
+
+        if (postLatch != null) {
+          try {
+            boolean success = postLatch.await(MAX_WAIT_MS, TimeUnit.MILLISECONDS);
+            if (!success) {
+              throw new RuntimeException("Timed out waiting for postLatch");
+            }
+          } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+          }
+        }
+      }
     }
   }
 
@@ -278,7 +328,7 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
   @Override
   @After
   public void tearDown() throws Exception {
-    stopComponentUnderTest();
+    stopProcessor();
     super.tearDown();
   }
 
@@ -289,15 +339,18 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
     when(workQueueMock.peekTopN(anyInt(), any(), anyLong()))
         .thenAnswer(
             invocation -> {
-              Object result;
-              int count = 0;
-              while ((result = queue.peek()) == null) {
-                Thread.sleep(1000);
-                count++;
-                if (count > 1) return null;
-              }
+              int n = invocation.getArgument(0);
 
-              return List.of(result);
+              int retries = 0;
+              while (retries < 2) {
+                List<Object> results = queue.stream().limit(n).collect(Collectors.toList());
+                if (!results.isEmpty()) {
+                  return results;
+                }
+                Thread.sleep(1000);
+                retries++;
+              }
+              return Collections.emptyList();
             });
 
     when(workQueueMock.getTailId())
@@ -327,7 +380,7 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
               return null;
             })
         .when(workQueueMock)
-        .remove(any(QueueEvent.class));
+        .remove(any(QueueEvent.class), anyBoolean());
 
     when(workQueueMock.poll())
         .thenAnswer(
@@ -700,12 +753,26 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
     }
   }
 
-  protected void startComponentUnderTest() {
+  protected void createAndStartProcessor(CountDownLatch postLatch) {
+    underTest =
+        new OverseerCollectionConfigSetProcessorToBeTested(
+            zkStateReaderMock,
+            "1234",
+            shardHandlerFactoryMock,
+            ADMIN_PATH,
+            workQueueMock,
+            runningMapMock,
+            overseerMock,
+            completedMapMock,
+            failureMapMock,
+            solrMetricsContextMock,
+            postLatch);
+
     thread = new Thread(underTest);
     thread.start();
   }
 
-  protected void stopComponentUnderTest() throws Exception {
+  protected void stopProcessor() throws Exception {
     if (null != underTest) {
       underTest.close();
       underTest = null;
@@ -753,6 +820,20 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
             lastProcessMessageResult = OverseerSolrResponseSerializer.deserialize(bytes);
           }
         };
+    queue.add(qe);
+  }
+
+  /** Submit a dumb job to the overseer that does nothing. */
+  private void issueMockJob(String id) {
+    Map<String, Object> propMap =
+        Map.of(
+            Overseer.QUEUE_OPERATION,
+            CollectionParams.CollectionAction.MOCK_COLL_TASK.toLower(),
+            "name",
+            id);
+
+    ZkNodeProps props = new ZkNodeProps(propMap);
+    QueueEvent qe = new QueueEvent(id, Utils.toJSON(props), null);
     queue.add(qe);
   }
 
@@ -957,24 +1038,7 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
 
     if (random().nextBoolean()) Collections.shuffle(createNodeList, random());
 
-    underTest =
-        new OverseerCollectionConfigSetProcessorToBeTested(
-            zkStateReaderMock,
-            "1234",
-            shardHandlerFactoryMock,
-            ADMIN_PATH,
-            workQueueMock,
-            runningMapMock,
-            overseerMock,
-            completedMapMock,
-            failureMapMock,
-            solrMetricsContextMock);
-
-    if (log.isInfoEnabled()) {
-      log.info("clusterstate {}", clusterStateMock.hashCode());
-    }
-
-    startComponentUnderTest();
+    createAndStartProcessor(null);
 
     final List<String> createNodeListToSend =
         ((createNodeListOption != CreateNodeListOptions.SEND_NULL) ? createNodeList : null);
@@ -1349,5 +1413,30 @@ public class OverseerCollectionConfigSetProcessorTest extends SolrTestCaseJ4 {
         numberOfSlices,
         false,
         distributedClusterStateUpdates);
+  }
+
+  /** Check no overseer task is rejected when the queue is flooded. */
+  @Test
+  public void testFloodQueue() throws Exception {
+
+    commonMocks(2, false);
+
+    // Set a latch, so all thread will be waiting once the task processing completes, but before
+    // the thread are returned to the pool.
+    // This validates that the main thread (that reads tasks from the distributed queue) does not
+    // submit more tasks than the pool can handle, even if the previous tasks were already
+    // completed.
+    CountDownLatch postLatch = new CountDownLatch(1);
+    createAndStartProcessor(postLatch);
+
+    for (int i = 0; i < OverseerTaskProcessor.MAX_PARALLEL_TASKS + 10; i++) {
+      issueMockJob(Integer.toString(i));
+    }
+
+    Thread.sleep(1000);
+    underTest.postLatch.countDown();
+
+    waitForEmptyQueue();
+    stopProcessor();
   }
 }
